--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,12 +11,10 @@
         "*html":"html",
         "**/templates/**/*.html":"django-html",
         "**/templates/**/*":"django-txt",
+        "**/requirements{**,*}.{txt,in}":"pip-requirements"
     },
     "emmet.triggerExpansionOnTab": true,
+    "emmet.includeLanguages": {"django-html":"html"},
     "editor.codeActionsOnSave": {
-
-        
-
-
     }
 }
